Fix Tech Shuttle routes and menu spacing.

--- a/node/public/stylesheets/style.css
+++ b/node/public/stylesheets/style.css
@@ -128,6 +128,7 @@ ul.tweet_list li a{
 
 #menu{
     font-size: 32px;
+    line-height: 120%;
 }
 
 .menu_item{
